fixed broken css

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,10 +14,7 @@
     box-sizing: border-box;
 }
 
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
+body {
     background-color: #f2ecef;
     font-family: Arial, sans-serif;
 }
